operator/pkg/gateway-api/testdata/gateway/httproute-cors/output/cec-same-namespace.yaml
metadata:
  creationTimestamp: null
  annotations:
    cec.cilium.io/use-original-source-address: "false"
  labels:
    gateway.networking.k8s.io/gateway-name: same-namespace
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
  ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1
      controller: true
      kind: Gateway
      name: same-namespace
      uid: ""
  resourceVersion: "1"
spec:
  backendServices:
    - name: infra-backend-v1
      namespace: gateway-conformance-infra
      number:
        - "8080"
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                commonHttpProtocolOptions:
                  maxStreamDuration: 0s
                httpFilters:
                  - name: envoy.filters.http.grpc_web
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.grpc_stats
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      emitFilterState: true
                      enableUpstreamStats: true
                  - name: envoy.filters.http.cors
                    typedConfig:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                internalAddressConfig: {}
                rds:
                  routeConfigName: listener-insecure
                statPrefix: listener-insecure
                streamIdleTimeout: 300s
                upgradeConfigs:
                  - upgradeType: websocket
                useRemoteAddress: true
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: listener-insecure
      virtualHosts:
        - domains:
            - "*"
          name: "*"
          routes:
            - match:
                pathSeparatedPrefix: /cors-wildcard-methods-headers-unauth
              route:
                cluster: gateway-conformance-infra:infra-backend-v1:8080
                maxStreamDuration:
                  maxStreamDuration: 0s
              typedPerFilterConfig:
                envoy.filters.http.cors:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  allowCredentials: false
                  allowHeaders: "*"
                  allowMethods: "*"
                  allowOriginStringMatch:
                    - safeRegex:
                        regex: ^.*$
                  maxAge: "5"
                  forwardNotMatchingPreflights: false 
            - match:
                pathSeparatedPrefix: /cors-wildcard-methods-headers
              route:
                cluster: gateway-conformance-infra:infra-backend-v1:8080
                maxStreamDuration:
                  maxStreamDuration: 0s
              typedPerFilterConfig:
                envoy.filters.http.cors:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  allowCredentials: true
                  allowHeaders: "*"
                  allowMethods: "*"
                  allowOriginStringMatch:
                    - safeRegex:
                        regex: ^.*$
                  maxAge: "5"
                  forwardNotMatchingPreflights: false           
            - match:
                pathSeparatedPrefix: /cors-wildcard-origin
              route:
                cluster: gateway-conformance-infra:infra-backend-v1:8080
                maxStreamDuration:
                  maxStreamDuration: 0s
              typedPerFilterConfig:
                envoy.filters.http.cors:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  allowCredentials: false
                  allowMethods: "PUT"
                  allowOriginStringMatch:
                    - safeRegex:
                        regex: ^.*$
                  maxAge: "5"
                  forwardNotMatchingPreflights: false
            - match:
                pathSeparatedPrefix: /cors-1
              route:
                cluster: gateway-conformance-infra:infra-backend-v1:8080
                maxStreamDuration:
                  maxStreamDuration: 0s
              typedPerFilterConfig:
                envoy.filters.http.cors:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  allowCredentials: true
                  allowHeaders: x-header-1, x-header-2
                  allowMethods: GET, OPTIONS
                  allowOriginStringMatch:
                    - exact: https://www.foo.com
                    - safeRegex:
                        regex: ^https://[A-Za-z0-9.-]+\.bar\.com$
                  exposeHeaders: x-header-3, x-header-4
                  maxAge: "3600"
                  forwardNotMatchingPreflights: false
            - match:
                pathSeparatedPrefix: /cors-2
              route:
                cluster: gateway-conformance-infra:infra-backend-v1:8080
                maxStreamDuration:
                  maxStreamDuration: 0s
              typedPerFilterConfig:
                envoy.filters.http.cors:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  allowCredentials: false
                  allowMethods: "*"
                  allowOriginStringMatch:
                    - exact: https://www.foo.com
                  maxAge: "5"
                  forwardNotMatchingPreflights: false
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/infra-backend-v1:8080
      name: gateway-conformance-infra:infra-backend-v1:8080
      outlierDetection:
        splitExternalLocalOriginErrors: true
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 60s
          useDownstreamProtocolConfig:
            http2ProtocolOptions: {}
  services:
    - listener: ""
      name: cilium-gateway-same-namespace
      namespace: gateway-conformance-infra
      ports:
        - 80
